# eos-challenge-contract

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt  test_script.sh
example/: ERC20.sh  ERC721.sh  HelloContract.sh  README.md  env.sh  preset.sh
include/: bytecode.hpp  eos_evm.hpp  eos_evm_host.hpp  eos_mock_host.hpp  eosio.token.hpp  evmc.h  evmc_status_code.hpp  gas_manager.hpp  rlp.hpp  test_contract.hpp  utils.hpp
include/ecc/: uECC.h
include/evmc/: mocked_host.hpp
src/: CMakeLists.txt  eos_evm.cpp  eos_mock_host.cpp  test_contract.cpp
src/RLP/: rlp.cpp
src/calculate/: CMakeLists.txt  add.cpp  add.hpp
src/ecc/: uECC.c
src/ethash/: CMakeLists.txt
src/evmone/: CMakeLists.txt
src/evmone/evmc/: CMakeLists.txt
src/evmone/evmc/lib/instructions/: CMakeLists.txt
src/evmone/lib/evmone/: CMakeLists.txt  analysis.hpp  evmone.cpp  instructions.cpp
src/intx/: CMakeLists.txt
src/intx/include/: int128.hpp  intx.hpp
src/intx/lib/: div.cpp  div.hpp
src/secp256k1/: CMakeLists.txt  libsecp256k1-config.h
src/secp256k1-eosio/: .gitignore  CMakeLists.txt  libsecp256k1-config.h
src/secp256k1/src/: ecmult_static_context.h
src/secp256k1/upstream/: COPYING
src/secp256k1/upstream/include/: secp256k1.h
src/secp256k1/upstream/src/: ecmult_impl.h  group_impl.h  secp256k1.c
src/secp256k1/upstream/src/modules/aggsig/: main_impl.h
src/secp256k1/upstream/src/modules/bulletproofs/: inner_product_impl.h  main_impl.h  rangeproof_impl.h
src/secp256k1/upstream/src/modules/commitment/: main_impl.h
src/secp256k1/upstream/src/modules/ecdh/: main_impl.h
src/secp256k1/upstream/src/modules/rangeproof/: main_impl.h  rangeproof_impl.h
src/secp256k1/upstream/src/modules/schnorrsig/: main_impl.h
test_script/: sign_message.js  test_script.sh
